k8s/06-api.yaml
#  API servis. 2 replike -> smislen rolling update + bolja dostupnost.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ticketing
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: ticketing-platform
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0      
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: ticketing-platform
    spec:
      serviceAccountName: ticketing-sa
      containers:
        - name: api
          image: image-registry.openshift-image-registry.svc:5000/ticketing/ticketing-api:1.0.0
          imagePullPolicy: IfNotPresent   
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /readyz, port: 8080 }   
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /healthz, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ticketing
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: ticketing-platform
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - port: 8080
      targetPort: 8080
